Intermediate commit (cleaning up CompletableFuture 11)